Project-5/yyparse.output
Terminals unused in grammar

   TOK_BLOCK
   TOK_CALL
   TOK_IFELSE
   TOK_INITDECL
   TOK_NEWARRAY
   TOK_TYPEID
   TOK_ROOT
   TOK_RETURNVOID
   TOK_PARAMLIST
   TOK_PROTOTYPE
   TOK_DECLID
   TOK_NEWSTRING
   TOK_VARDECL
   TOK_INDEX
   TOK_FUNCTION


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program structdef
    3        | program function
    4        | program statement
    5        | program error '}'
    6        | program error ';'
    7        | /* empty */

    8 structdef: structrt '}'

    9 structrt: structrt fielddecl ';'
   10         | TOK_STRUCT TOK_IDENT '{'

   11 fielddecl: basetype TOK_ARRAY TOK_IDENT
   12          | basetype TOK_IDENT

   13 basetype: TOK_VOID
   14         | TOK_BOOL
   15         | TOK_CHAR
   16         | TOK_INT
   17         | TOK_STRING
   18         | TOK_IDENT

   19 function: identdecl pararoot ')' block

   20 pararoot: pararoot ',' identdecl
   21         | '(' identdecl
   22         | '('

   23 identdecl: basetype TOK_ARRAY TOK_IDENT
   24          | basetype TOK_IDENT

   25 block: blockrt '}'
   26      | ';'

   27 blockrt: blockrt statement
   28        | '{'

   29 statement: block
   30          | vardecl
   31          | while
   32          | ifelse
   33          | return
   34          | expr ';'

   35 vardecl: identdecl '=' expr ';'

   36 while: TOK_WHILE '(' expr ')' statement

   37 ifelse: TOK_IF '(' expr ')' statement
   38       | TOK_IF '(' expr ')' statement TOK_ELSE statement

   39 return: TOK_RETURN expr ';'
   40       | TOK_RETURN ';'

   41 expr: binop
   42     | unop
   43     | allocator
   44     | call
   45     | '(' expr ')'
   46     | variable
   47     | constant

   48 binop: expr TOK_EQ expr
   49      | expr TOK_NE expr
   50      | expr TOK_LT expr
   51      | expr TOK_LE expr
   52      | expr TOK_GT expr
   53      | expr TOK_GE expr
   54      | expr '+' expr
   55      | expr '-' expr
   56      | expr '*' expr
   57      | expr '/' expr
   58      | expr '%' expr
   59      | expr '=' expr

   60 unop: '-' expr
   61     | '+' expr
   62     | '!' expr
   63     | TOK_ORD expr
   64     | TOK_CHR expr

   65 allocator: TOK_NEW TOK_IDENT '(' ')'
   66          | TOK_NEW TOK_STRING '(' expr ')'
   67          | TOK_NEW basetype '[' expr ']'

   68 call: TOK_IDENT '(' ')'
   69     | callrt ')'

   70 callrt: callrt ',' expr
   71       | TOK_IDENT '(' expr

   72 variable: TOK_IDENT
   73         | expr '.' expr
   74         | expr '[' expr ']'

   75 constant: TOK_INTCON
   76         | TOK_CHARCON
   77         | TOK_STRINGCON
   78         | TOK_FALSE
   79         | TOK_TRUE
   80         | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 62
'%' (37) 58
'(' (40) 21 22 36 37 38 45 65 66 68 71
')' (41) 19 36 37 38 45 65 66 68 69
'*' (42) 56
'+' (43) 54 61
',' (44) 20 70
'-' (45) 55 60
'.' (46) 73
'/' (47) 57
';' (59) 6 9 26 34 35 39 40
'=' (61) 35 59
'[' (91) 67 74
']' (93) 67 74
'{' (123) 10 28
'}' (125) 5 8 25
error (256) 5 6
TOK_VOID (258) 13
TOK_BOOL (259) 14
TOK_CHAR (260) 15
TOK_INT (261) 16
TOK_STRING (262) 17 66
TOK_IF (263) 37 38
TOK_ELSE (264) 38
TOK_WHILE (265) 36
TOK_RETURN (266) 39 40
TOK_STRUCT (267) 10
TOK_FALSE (268) 78
TOK_TRUE (269) 79
TOK_NULL (270) 80
TOK_NEW (271) 65 66 67
TOK_ARRAY (272) 11 23
TOK_EQ (273) 48
TOK_NE (274) 49
TOK_LT (275) 50
TOK_LE (276) 51
TOK_GT (277) 52
TOK_GE (278) 53
TOK_IDENT (279) 10 11 12 18 23 24 65 68 71 72
TOK_INTCON (280) 75
TOK_CHARCON (281) 76
TOK_STRINGCON (282) 77
TOK_BLOCK (283)
TOK_CALL (284)
TOK_IFELSE (285)
TOK_INITDECL (286)
TOK_POS (287)
TOK_NEG (288)
TOK_NEWARRAY (289)
TOK_TYPEID (290)
TOK_FIELD (291)
TOK_ORD (292) 63
TOK_CHR (293) 64
TOK_ROOT (294)
TOK_RETURNVOID (295)
TOK_PARAMLIST (296)
TOK_PROTOTYPE (297)
TOK_DECLID (298)
TOK_NEWSTRING (299)
TOK_VARDECL (300)
TOK_INDEX (301)
TOK_FUNCTION (302)
TOK_PARENS (303)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
start (66)
    on left: 1, on right: 0
program (67)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6
structdef (68)
    on left: 8, on right: 2
structrt (69)
    on left: 9 10, on right: 8 9
fielddecl (70)
    on left: 11 12, on right: 9
basetype (71)
    on left: 13 14 15 16 17 18, on right: 11 12 23 24 67
function (72)
    on left: 19, on right: 3
pararoot (73)
    on left: 20 21 22, on right: 19 20
identdecl (74)
    on left: 23 24, on right: 19 20 21 35
block (75)
    on left: 25 26, on right: 19 29
blockrt (76)
    on left: 27 28, on right: 25 27
statement (77)
    on left: 29 30 31 32 33 34, on right: 4 27 36 37 38
vardecl (78)
    on left: 35, on right: 30
while (79)
    on left: 36, on right: 31
ifelse (80)
    on left: 37 38, on right: 32
return (81)
    on left: 39 40, on right: 33
expr (82)
    on left: 41 42 43 44 45 46 47, on right: 34 35 36 37 38 39 45 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 66 67 70 71 73
    74
binop (83)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59, on right: 41
unop (84)
    on left: 60 61 62 63 64, on right: 42
allocator (85)
    on left: 65 66 67, on right: 43
call (86)
    on left: 68 69, on right: 44
callrt (87)
    on left: 70 71, on right: 69 70
variable (88)
    on left: 72 73 74, on right: 46
constant (89)
    on left: 75 76 77 78 79 80, on right: 47


state 0

    0 $accept: . start $end

    $default  reduce using rule 7 (program)

    start    go to state 1
    program  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: program .
    2 program: program . structdef
    3        | program . function
    4        | program . statement
    5        | program . error '}'
    6        | program . error ';'

    error          shift, and go to state 4
    TOK_VOID       shift, and go to state 5
    TOK_BOOL       shift, and go to state 6
    TOK_CHAR       shift, and go to state 7
    TOK_INT        shift, and go to state 8
    TOK_STRING     shift, and go to state 9
    TOK_IF         shift, and go to state 10
    TOK_WHILE      shift, and go to state 11
    TOK_RETURN     shift, and go to state 12
    TOK_STRUCT     shift, and go to state 13
    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 18
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28
    '('            shift, and go to state 29

    $end  reduce using rule 1 (start)

    structdef  go to state 30
    structrt   go to state 31
    basetype   go to state 32
    function   go to state 33
    identdecl  go to state 34
    block      go to state 35
    blockrt    go to state 36
    statement  go to state 37
    vardecl    go to state 38
    while      go to state 39
    ifelse     go to state 40
    return     go to state 41
    expr       go to state 42
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 3

    0 $accept: start $end .

    $default  accept


state 4

    5 program: program error . '}'
    6        | program error . ';'

    '}'  shift, and go to state 50
    ';'  shift, and go to state 51


state 5

   13 basetype: TOK_VOID .

    $default  reduce using rule 13 (basetype)


state 6

   14 basetype: TOK_BOOL .

    $default  reduce using rule 14 (basetype)


state 7

   15 basetype: TOK_CHAR .

    $default  reduce using rule 15 (basetype)


state 8

   16 basetype: TOK_INT .

    $default  reduce using rule 16 (basetype)


state 9

   17 basetype: TOK_STRING .

    $default  reduce using rule 17 (basetype)


state 10

   37 ifelse: TOK_IF . '(' expr ')' statement
   38       | TOK_IF . '(' expr ')' statement TOK_ELSE statement

    '('  shift, and go to state 52


state 11

   36 while: TOK_WHILE . '(' expr ')' statement

    '('  shift, and go to state 53


state 12

   39 return: TOK_RETURN . expr ';'
   40       | TOK_RETURN . ';'

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    ';'            shift, and go to state 55
    '('            shift, and go to state 29

    expr       go to state 56
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 13

   10 structrt: TOK_STRUCT . TOK_IDENT '{'

    TOK_IDENT  shift, and go to state 57


state 14

   78 constant: TOK_FALSE .

    $default  reduce using rule 78 (constant)


state 15

   79 constant: TOK_TRUE .

    $default  reduce using rule 79 (constant)


state 16

   80 constant: TOK_NULL .

    $default  reduce using rule 80 (constant)


state 17

   65 allocator: TOK_NEW . TOK_IDENT '(' ')'
   66          | TOK_NEW . TOK_STRING '(' expr ')'
   67          | TOK_NEW . basetype '[' expr ']'

    TOK_VOID    shift, and go to state 5
    TOK_BOOL    shift, and go to state 6
    TOK_CHAR    shift, and go to state 7
    TOK_INT     shift, and go to state 8
    TOK_STRING  shift, and go to state 58
    TOK_IDENT   shift, and go to state 59

    basetype  go to state 60


state 18

   18 basetype: TOK_IDENT .
   68 call: TOK_IDENT . '(' ')'
   71 callrt: TOK_IDENT . '(' expr
   72 variable: TOK_IDENT .

    '('  shift, and go to state 61

    TOK_ARRAY  reduce using rule 18 (basetype)
    TOK_IDENT  reduce using rule 18 (basetype)
    $default   reduce using rule 72 (variable)


state 19

   75 constant: TOK_INTCON .

    $default  reduce using rule 75 (constant)


state 20

   76 constant: TOK_CHARCON .

    $default  reduce using rule 76 (constant)


state 21

   77 constant: TOK_STRINGCON .

    $default  reduce using rule 77 (constant)


state 22

   63 unop: TOK_ORD . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 62
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 23

   64 unop: TOK_CHR . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 63
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 24

   61 unop: '+' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 64
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 25

   60 unop: '-' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 65
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 26

   62 unop: '!' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 66
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 27

   26 block: ';' .

    $default  reduce using rule 26 (block)


state 28

   28 blockrt: '{' .

    $default  reduce using rule 28 (blockrt)


state 29

   45 expr: '(' . expr ')'

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 67
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 30

    2 program: program structdef .

    $default  reduce using rule 2 (program)


state 31

    8 structdef: structrt . '}'
    9 structrt: structrt . fielddecl ';'

    TOK_VOID    shift, and go to state 5
    TOK_BOOL    shift, and go to state 6
    TOK_CHAR    shift, and go to state 7
    TOK_INT     shift, and go to state 8
    TOK_STRING  shift, and go to state 9
    TOK_IDENT   shift, and go to state 68
    '}'         shift, and go to state 69

    fielddecl  go to state 70
    basetype   go to state 71


state 32

   23 identdecl: basetype . TOK_ARRAY TOK_IDENT
   24          | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 72
    TOK_IDENT  shift, and go to state 73


state 33

    3 program: program function .

    $default  reduce using rule 3 (program)


state 34

   19 function: identdecl . pararoot ')' block
   35 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 74
    '('  shift, and go to state 75

    pararoot  go to state 76


state 35

   29 statement: block .

    $default  reduce using rule 29 (statement)


state 36

   25 block: blockrt . '}'
   27 blockrt: blockrt . statement

    TOK_VOID       shift, and go to state 5
    TOK_BOOL       shift, and go to state 6
    TOK_CHAR       shift, and go to state 7
    TOK_INT        shift, and go to state 8
    TOK_STRING     shift, and go to state 9
    TOK_IF         shift, and go to state 10
    TOK_WHILE      shift, and go to state 11
    TOK_RETURN     shift, and go to state 12
    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 18
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '}'            shift, and go to state 77
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28
    '('            shift, and go to state 29

    basetype   go to state 32
    identdecl  go to state 78
    block      go to state 35
    blockrt    go to state 36
    statement  go to state 79
    vardecl    go to state 38
    while      go to state 39
    ifelse     go to state 40
    return     go to state 41
    expr       go to state 42
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 37

    4 program: program statement .

    $default  reduce using rule 4 (program)


state 38

   30 statement: vardecl .

    $default  reduce using rule 30 (statement)


state 39

   31 statement: while .

    $default  reduce using rule 31 (statement)


state 40

   32 statement: ifelse .

    $default  reduce using rule 32 (statement)


state 41

   33 statement: return .

    $default  reduce using rule 33 (statement)


state 42

   34 statement: expr . ';'
   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    TOK_EQ  shift, and go to state 80
    TOK_NE  shift, and go to state 81
    TOK_LT  shift, and go to state 82
    TOK_LE  shift, and go to state 83
    TOK_GT  shift, and go to state 84
    TOK_GE  shift, and go to state 85
    '='     shift, and go to state 86
    '+'     shift, and go to state 87
    '-'     shift, and go to state 88
    '*'     shift, and go to state 89
    '/'     shift, and go to state 90
    '%'     shift, and go to state 91
    '['     shift, and go to state 92
    '.'     shift, and go to state 93
    ';'     shift, and go to state 94


state 43

   41 expr: binop .

    $default  reduce using rule 41 (expr)


state 44

   42 expr: unop .

    $default  reduce using rule 42 (expr)


state 45

   43 expr: allocator .

    $default  reduce using rule 43 (expr)


state 46

   44 expr: call .

    $default  reduce using rule 44 (expr)


state 47

   69 call: callrt . ')'
   70 callrt: callrt . ',' expr

    ')'  shift, and go to state 95
    ','  shift, and go to state 96


state 48

   46 expr: variable .

    $default  reduce using rule 46 (expr)


state 49

   47 expr: constant .

    $default  reduce using rule 47 (expr)


state 50

    5 program: program error '}' .

    $default  reduce using rule 5 (program)


state 51

    6 program: program error ';' .

    $default  reduce using rule 6 (program)


state 52

   37 ifelse: TOK_IF '(' . expr ')' statement
   38       | TOK_IF '(' . expr ')' statement TOK_ELSE statement

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 97
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 53

   36 while: TOK_WHILE '(' . expr ')' statement

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 98
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 54

   68 call: TOK_IDENT . '(' ')'
   71 callrt: TOK_IDENT . '(' expr
   72 variable: TOK_IDENT .

    '('  shift, and go to state 61

    $default  reduce using rule 72 (variable)


state 55

   40 return: TOK_RETURN ';' .

    $default  reduce using rule 40 (return)


state 56

   39 return: TOK_RETURN expr . ';'
   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    TOK_EQ  shift, and go to state 80
    TOK_NE  shift, and go to state 81
    TOK_LT  shift, and go to state 82
    TOK_LE  shift, and go to state 83
    TOK_GT  shift, and go to state 84
    TOK_GE  shift, and go to state 85
    '='     shift, and go to state 86
    '+'     shift, and go to state 87
    '-'     shift, and go to state 88
    '*'     shift, and go to state 89
    '/'     shift, and go to state 90
    '%'     shift, and go to state 91
    '['     shift, and go to state 92
    '.'     shift, and go to state 93
    ';'     shift, and go to state 99


state 57

   10 structrt: TOK_STRUCT TOK_IDENT . '{'

    '{'  shift, and go to state 100


state 58

   17 basetype: TOK_STRING .
   66 allocator: TOK_NEW TOK_STRING . '(' expr ')'

    '('  shift, and go to state 101

    $default  reduce using rule 17 (basetype)


state 59

   18 basetype: TOK_IDENT .
   65 allocator: TOK_NEW TOK_IDENT . '(' ')'

    '('  shift, and go to state 102

    $default  reduce using rule 18 (basetype)


state 60

   67 allocator: TOK_NEW basetype . '[' expr ']'

    '['  shift, and go to state 103


state 61

   68 call: TOK_IDENT '(' . ')'
   71 callrt: TOK_IDENT '(' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    ')'            shift, and go to state 104
    '('            shift, and go to state 29

    expr       go to state 105
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 62

   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   63 unop: TOK_ORD expr .
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    '['  shift, and go to state 92
    '.'  shift, and go to state 93

    $default  reduce using rule 63 (unop)


state 63

   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   64 unop: TOK_CHR expr .
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    '['  shift, and go to state 92
    '.'  shift, and go to state 93

    $default  reduce using rule 64 (unop)


state 64

   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   61 unop: '+' expr .
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    '['  shift, and go to state 92
    '.'  shift, and go to state 93

    $default  reduce using rule 61 (unop)


state 65

   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   60 unop: '-' expr .
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    '['  shift, and go to state 92
    '.'  shift, and go to state 93

    $default  reduce using rule 60 (unop)


state 66

   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   62 unop: '!' expr .
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    '['  shift, and go to state 92
    '.'  shift, and go to state 93

    $default  reduce using rule 62 (unop)


state 67

   45 expr: '(' expr . ')'
   48 binop: expr . TOK_EQ expr
   49      | expr . TOK_NE expr
   50      | expr . TOK_LT expr
   51      | expr . TOK_LE expr
   52      | expr . TOK_GT expr
   53      | expr . TOK_GE expr
   54      | expr . '+' expr
   55      | expr . '-' expr
   56      | expr . '*' expr
   57      | expr . '/' expr
   58      | expr . '%' expr
   59      | expr . '=' expr
   73 variable: expr . '.' expr
   74         | expr . '[' expr ']'

    TOK_EQ  shift, and go to state 80
    TOK_NE  shift, and go to state 81
    TOK_LT  shift, and go to state 82
    TOK_LE  shift, and go to state 83
    TOK_GT  shift, and go to state 84
    TOK_GE  shift, and go to state 85
    '='     shift, and go to state 86
    '+'     shift, and go to state 87
    '-'     shift, and go to state 88
    '*'     shift, and go to state 89
    '/'     shift, and go to state 90
    '%'     shift, and go to state 91
    '['     shift, and go to state 92
    '.'     shift, and go to state 93
    ')'     shift, and go to state 106


state 68

   18 basetype: TOK_IDENT .

    $default  reduce using rule 18 (basetype)


state 69

    8 structdef: structrt '}' .

    $default  reduce using rule 8 (structdef)


state 70

    9 structrt: structrt fielddecl . ';'

    ';'  shift, and go to state 107


state 71

   11 fielddecl: basetype . TOK_ARRAY TOK_IDENT
   12          | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 108
    TOK_IDENT  shift, and go to state 109


state 72

   23 identdecl: basetype TOK_ARRAY . TOK_IDENT

    TOK_IDENT  shift, and go to state 110


state 73

   24 identdecl: basetype TOK_IDENT .

    $default  reduce using rule 24 (identdecl)


state 74

   35 vardecl: identdecl '=' . expr ';'

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29

    expr       go to state 111
    binop      go to state 43
    unop       go to state 44
    allocator  go to state 45
    call       go to state 46
    callrt     go to state 47
    variable   go to state 48
    constant   go to state 49


state 75

   21 pararoot: '(' . identdecl
   22         | '(' .

    TOK_VOID    shift, and go to state 5
    TOK_BOOL    shift, and go to state 6
    TOK_CHAR    shift, and go to state 7
    TOK_INT     shift, and go to state 8
    TOK_STRING  shift, and go to state 9
    TOK_IDENT   shift, and go to state 68

    $default  reduce using rule 22 (pararoot)

    basetype   go to state 32
    identdecl  go to state 112


state 76

   19 function: identdecl pararoot . ')' block
   20 pararoot: pararoot . ',' identdecl

    ')'  shift, and go to state 113
    ','  shift, and go to state 114


state 77

   25 block: blockrt '}' .

    $default  reduce using rule 25 (block)


state 78

   35 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 74


state 79

   27 blockrt: blockrt statement .

    $default  reduce using rule 27 (blockrt)


state 80

   48 binop: expr TOK_EQ . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 54
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 22
    TOK_CHR        shift, and go to state 23
    '+'            shift, and go to state 24
    '-'            shift, and go to state 25
    '!'            shift, and go to state 26
    '('            shift, and go to state 29
